--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,7 +8,7 @@
     <title>My Portfolio</title>
   </head>
   <body>
-    <div id="root" class="h-screen dark: bg-gray-600"></div>
+    <div id="root"></div>
     <script src="../src/index.js" type="type/JSX"></script>
   </body>
 </html>
